loco-gen/src/snapshots/loco_gen__tera_ext__tests__can_render_form_field_[form_uuid^_uuid^].snap
---
source: loco-gen/src/tera_ext.rs
expression: "format!(\"Create form\\n\\n{create_form}\\n\\nEdit Form\\n\\n{edit_form}\")"
---
Create form

<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">uuid^</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" id="uuid^" name="uuid^" type="text" value="" required pattern="[0-9A-Fa-f]{{8}}-[0-9A-Fa-f]{{4}}-[0-9A-Fa-f]{{4}}-[0-9A-Fa-f]{{4}}-[0-9A-Fa-f]{{12}}"/>
    <p id=":rh:-form-item-description" class="text-[0.8rem] text-muted-foreground">e.g: 11111111-1111-1111-1111-111111111111..</p>
</div>

Edit Form

<div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">uuid^</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" id="uuid^" name="uuid^" type="text" value="{{item.uuid^}}" required pattern="[0-9A-Fa-f]{{8}}-[0-9A-Fa-f]{{4}}-[0-9A-Fa-f]{{4}}-[0-9A-Fa-f]{{4}}-[0-9A-Fa-f]{{12}}"/>
    <p id=":rh:-form-item-description" class="text-[0.8rem] text-muted-foreground">e.g: 11111111-1111-1111-1111-111111111111..</p>
</div>
